--- a/src/index.html
+++ b/src/index.html
@@ -66,11 +66,15 @@
               <img src="img/cakes/img1.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Кремовый замок</div>
-              <div class="catalog__item-text title title_fz16">
-                Нежный крем любого цвета на выбор, вафельная основа
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Кремовый замок</div>
+                <div class="catalog__item-text title title_fz16">
+                  Нежный крем любого цвета на выбор, вафельная основа
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -79,11 +83,15 @@
               <img src="img/cakes/img2.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Малиновый рай</div>
-              <div class="catalog__item-text title title_fz16">
-                Воздушный крем, темная основа и ягода малины
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Малиновый рай</div>
+                <div class="catalog__item-text title title_fz16">
+                  Воздушный крем, темная основа и ягода малины
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -92,11 +100,15 @@
               <img src="img/cakes/img3.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Фейерверк</div>
-              <div class="catalog__item-text title title_fz16">
-                Разноцветные крем, с бисквитной основой
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Фейерверк</div>
+                <div class="catalog__item-text title title_fz16">
+                  Разноцветные крем, с бисквитной основой
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -105,11 +117,15 @@
               <img src="img/cakes/img4.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Шоколадный мир</div>
-              <div class="catalog__item-text title title_fz16">
-                Ореховая стружка, нежный крем и шоколадная основа
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Шоколадный мир</div>
+                <div class="catalog__item-text title title_fz16">
+                  Ореховая стружка, нежный крем и шоколадная основа
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -118,11 +134,15 @@
               <img src="img/cakes/img5.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Слезы дракона</div>
-              <div class="catalog__item-text title title_fz16">
-                Нежный крем любого цвета на выбор, вафельная основа
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Слезы дракона</div>
+                <div class="catalog__item-text title title_fz16">
+                  Нежный крем любого цвета на выбор, вафельная основа
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -131,11 +151,15 @@
               <img src="img/cakes/img6.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Летняя фантазия</div>
-              <div class="catalog__item-text title title_fz16">
-                Украшения в форме сердец, для любимого человека
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Летняя фантазия</div>
+                <div class="catalog__item-text title title_fz16">
+                  Украшения в форме сердец, для любимого человека
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -144,11 +168,15 @@
               <img src="img/cakes/img7.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Мыс безумия</div>
-              <div class="catalog__item-text title title_fz16">
-                Разноцветная основа, стружка и нежный крем
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Мыс безумия</div>
+                <div class="catalog__item-text title title_fz16">
+                  Разноцветная основа, стружка и нежный крем
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -157,11 +185,15 @@
               <img src="img/cakes/img8.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Облачная сказка</div>
-              <div class="catalog__item-text title title_fz16">
-                Светлая основа, нежный крем со стружкой сверху
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Облачная сказка</div>
+                <div class="catalog__item-text title title_fz16">
+                  Светлая основа, нежный крем со стружкой сверху
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -170,11 +202,15 @@
               <img src="img/cakes/img9.jpg" alt="cake" />
             </div>
             <div class="catalog__item-descr">
-              <div class="catalog__item-title">Темный рыцарь</div>
-              <div class="catalog__item-text title title_fz16">
-                Тёмная основа, нежный крем и вкусные шарики
+              <div class="catalog__item-descr-wrapper">
+                <div class="catalog__item-title">Темный рыцарь</div>
+                <div class="catalog__item-text title title_fz16">
+                  Тёмная основа, нежный крем и вкусные шарики
+                </div>
+                <div class="catalog__item-price title title_fz24">
+                  150 ₽/шт.
+                </div>
               </div>
-              <div class="catalog__item-price title title_fz24">150 ₽/шт.</div>
               <a href="#" class="catalog__item-btn btn">Заказать</a>
             </div>
           </div>
@@ -184,21 +220,23 @@
 
     <section class="content">
       <div class="content__img-start"></div>
-      <div class="container">
+      <div class="content__wrapper-second">
         <div class="content__wrapper">
-          <div class="content__label label">Не нашли то что нужно?</div>
-          <h2 class="content__title title title_fz48 title_white">
-            Приготовим заказ любой сложности по фото или эскизу
-          </h2>
-          <div class="content__subtitle title title_fz21 title_white">
-            Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость
-            за 30 минут
+          <div class="content__img"><img src="img/phone.png" alt="" /></div>
+          <div class="content__text">
+            <div class="content__label label">Не нашли то что нужно?</div>
+            <h2 class="content__title title title_fz48 title_white">
+              Приготовим заказ любой сложности по фото или эскизу
+            </h2>
+            <div class="content__subtitle title title_fz21 title_white">
+              Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость
+              за 30 минут
+            </div>
+            <a href="" class="content__link btn">Загрузить фотографию</a>
           </div>
-          <a href="" class="content__link btn">Загрузить фотографию</a>
         </div>
+        <div class="content__img-end"></div>
       </div>
-      <div class="content__img-main"></div>
-      <div class="content__img-end"></div>
     </section>
 
     <section class="cook">
